# erless

./: .replit  ACCESS_INSTRUCTIONS.md  DIRECT_ACCESS.html  Dockerfile  EMPLOYER_ACCESS.html  HEALTHCARE_ACCESS.html  README.md  SUPPORT_SYSTEM.md  admin_cookies.txt  backup.Dockerfile  care_manager_cookies.txt  caremanager_test.txt  cookies.txt  employer-direct-access.html  fly.toml  package-lock.json  package.json  production.env  pyproject.toml  quick-access.html  replit.md  response_headers.txt  session.txt  session_test.txt  tailwind.config.ts  test-cookies.txt  test_cookies.txt  working_session.txt
attached_assets/: Pasted--CORE-FEATURES-1-Patient-Queue-Triage-Summary-List-of-patients-in-waiting-linked-to-verified-1748699165803.txt  Pasted-Build-a-fullstack-healthcare-claims-processing-platform-called-Erlessed-themed-in-light-blue-and-wh-1748621056005.txt  Pasted-Create-a-dedicated-Debtors-Dashboard-for-the-hospital-accounts-department-to-manage-medical-insura-1750589291348_1750589291349.txt  Pasted-Create-a-full-stack-web-application-with-multiple-role-based-dashboards-for-a-healthcare-claims-plat-1750274827626_1750274827645.txt  Pasted-Design-a-Debtors-Dashboard-for-the-accounts-team-to-audit-organize-and-submit-verified-claims-in-1750590587190_1750590587192.txt  Pasted-Title-Insurer-Policy-Scheme-Management-with-Role-Based-Dashboards-Objective-Implement-insurer-1754077578557_1754077578581.txt  Pasted-Using-React-TailwindCSS-React-Router-DOM-rebuild-the-UI-for-the-Erlessed-healthcare-claims-plat-1750451581540_1750451581541.txt
employer-dashboard/: README.md  (+6 more)
(+197 files in other folders)
